--- a/src/components/UI/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/src/components/UI/ThemeSwitcher/ThemeSwitcher.module.css
@@ -17,7 +17,17 @@
     }
 }
 
-.btn_circle:hover {
+
+
+
+@media (hover: hover) and (pointer: fine) {
+    .btn_circle:hover {
+        color: var(--highlight-color);
+        border-color: var(--highlight-color);
+    }
+}
+
+.btn_circle:active {
     color: var(--highlight-color);
     border-color: var(--highlight-color);
 }
