--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -221,13 +221,6 @@ table > :not(caption) > * > * {
     border-color: var(--green) !important;
 }
 
-.accordion-button::after {
-    /* background-color: var(--bright-color);
-    align-items: center;
-    content: ".";
-    background-image: none; */
-    /* background-blend-mode: multiply */
-}
 
 .accordion-item {
     background: inherit;
@@ -367,4 +360,24 @@ input[type="number"]:focus {
 
 .accordion-item {
     border: none !important;
+}
+
+::-webkit-scrollbar {
+    width: 3px;
+    height: 5px !important;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+background: var(--opposite); 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: var(--highlight-color); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: var(--highlight-color); 
 }
