--- a/src/components/UI/MyButton/MyButton.module.css
+++ b/src/components/UI/MyButton/MyButton.module.css
@@ -1,19 +1,34 @@
 .myBtn {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
     color: var(--highlight-color);
     border: 1px solid var(--highlight-color);
+    border-radius: 0.375rem;
     text-decoration: none;
     outline: none;
+    background: var(--opposite);
+    
 }
 
-.myBtn:focus {
-    /* color: var(--highlight-color) !important;
+/* .myBtn:focus {
+    color: var(--opposite) !important;
     text-shadow: none;
     box-shadow: none;
-    text-decoration: none; */
+    text-decoration: none;
+} */
+
+@media (hover: hover) and (pointer: fine) {
+    .myBtn:hover {
+        color: inherit;
+        background: var(--highlight-color);
+        box-shadow: 0 0.5rem 1rem var(--highlight-color);
+    }
 }
 
-.myBtn:hover {
-    color: inherit;
-    background: var(--highlight-color);
-    box-shadow: 0 0.5rem 1rem var(--highlight-color);
+.myBtn:active {
+color: inherit;
+background: var(--highlight-color);
+box-shadow: 0 0.5rem 1rem var(--highlight-color);
 }
