--- a/src/components/ModeratorsSettings/ModeratorSettings.module.css
+++ b/src/components/ModeratorsSettings/ModeratorSettings.module.css
@@ -51,8 +51,8 @@
 
     appearance: none;
     background-clip: padding-box;
-    border: var(--bs-border-width) solid var(--bs-border-color);
-    border-radius: var(--bs-border-radius);
+    border: 1px solid var(--highlight-color);
+    border-radius: 0.375rem;
     transition:
         border-color 0.15s ease-in-out,
         box-shadow 0.15s ease-in-out;
@@ -73,8 +73,8 @@
 
     appearance: none;
     background-clip: padding-box;
-    border: var(--bs-border-width) solid var(--bs-border-color);
-    border-radius: var(--bs-border-radius);
+    border: 1px solid var(--highlight-color);
+    border-radius: 0.375rem;
     transition:
         border-color 0.15s ease-in-out,
         box-shadow 0.15s ease-in-out;
