--- a/src/components/UI/MyNavbar/MyNavbar.module.css
+++ b/src/components/UI/MyNavbar/MyNavbar.module.css
@@ -73,8 +73,8 @@
     justify-content: flex-end;
 }
 
-.inner_navbar_max {
-    @media (max-width: 993px) {
+.work_navbar_max {
+    @media (max-width: 992px) {
         display: none;
     }
 }
