--- a/src/components/UI/MyNavbar/MyNavbar.module.css
+++ b/src/components/UI/MyNavbar/MyNavbar.module.css
@@ -1,86 +1,87 @@
 .nav_link {
-    color: var(--dark-ligth) !important;
-    padding-left: 0.35rem;
-    padding-right: 0.35rem;
-    padding-top: 0.5rem;
+  color: var(--dark-ligth) !important;
+  padding-left: 0.35rem;
+  padding-right: 0.35rem;
+  padding-top: 0.5rem;
 }
 
 .nav_link:hover {
-    color: var(--highlight-color) !important;
+  color: var(--highlight-color) !important;
 }
 
 .my_navbar {
-    background: inherit;
-    height: auto !important;
-    padding-right: 0.5 rem;
+  background: inherit;
+  height: auto !important;
+  padding-right: 0.5 rem;
 }
 
 .my_drop {
-    left: 60%;
-    right: auto;
-    border-color: inherit !important;
-    border-width: 1px;
-    transform: translateX(-60%);
-    background: inherit;
-    color: var(--dark-ligth);
-    @media (max-width: 992px) {
-        left: 50%;
-        transform: translateX(-0%);
-        text-decoration-color: var(--green) !important;
-    }
+  left: 60%;
+  right: auto;
+  border-color: inherit !important;
+  border-width: 1px;
+  transform: translateX(-60%);
+  background: inherit;
+  color: var(--dark-ligth);
+
+  @media (max-width: 992px) {
+    left: 50%;
+    transform: translateX(-0%);
+    text-decoration-color: var(--green) !important;
+  }
 }
 
 .my_drop a {
-    color: var(--dark-ligth);
+  color: var(--dark-ligth);
 }
 
 .my_toggle {
-    border: none;
-    background: inherit !important;
-    color: var(--opposite) !important;
+  border: none;
+  background: inherit !important;
+  color: var(--opposite) !important;
 
-    @media (max-width: 992px) {
-        margin-top: 0.25em;
-    }
+  @media (max-width: 992px) {
+    margin-top: 0.25em;
+  }
 }
 
 .navbar_toggler {
-    box-shadow: none !important;
-    border: none !important;
+  box-shadow: none !important;
+  border: none !important;
 }
 
 .navbar_img {
-    width: 45px;
-    height: 45px;
+  width: 45px;
+  height: 45px;
 }
 
 .theme_swither_max {
-    margin-left: auto;
-    @media (max-width: 992px) {
-        display: none;
-    }
+  margin-left: auto;
+  @media (max-width: 992px) {
+    display: none;
+  }
 }
 
 .theme_swither_min {
-    margin-left: auto !important;
-    @media (min-width: 992px) {
-        display: none;
-    }
+  margin-left: auto !important;
+  @media (min-width: 992px) {
+    display: none;
+  }
+}
+
+.inner_navbar_max {
+  @media (max-width: 992px) {
+    display: none;
+  }
 }
 
 .theme_swither_wrapper {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.work_navbar_max {
-    @media (max-width: 992px) {
-        display: none;
-    }
+  display: flex;
+  justify-content: flex-end;
 }
 
 .inner_navbar_min {
-    @media (min-width: 992px) {
-        display: none;
-    }
+  @media (min-width: 992px) {
+    display: none;
+  }
 }
