--- a/src/components/TournamentFilter/TournamentFilter.module.css
+++ b/src/components/TournamentFilter/TournamentFilter.module.css
@@ -1,5 +1,9 @@
 .filter_btn {
     max-height: 40px;
+
+    @media (max-width: 576px) {
+        margin-top: 5px;
+    }
 }
 
 .filter_ul {
@@ -30,4 +34,9 @@
 .game_filter_container {
     display: flex;
     flex-direction: row;
+
+    @media (max-width: 576px) {
+        flex-direction: column;
+    }
+    
 }
