--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -309,6 +309,10 @@ table > :not(caption) > * > * {
     color: var(--dark-ligth);
 }
 
+.sign-button {
+    font-size: 22px;
+}
+
 input::-webkit-input-placeholder {
     /* WebKit browsers */
     color: var(--bright-color);
