--- a/src/pages/CreateTournament/CreateTournament.module.css
+++ b/src/pages/CreateTournament/CreateTournament.module.css
@@ -24,3 +24,35 @@
     margin-top: 10px;
     color: rgb(180, 118, 118);
 }
+
+.additional_settings_wrapper {
+    display: flex;
+    flex-direction: row;
+
+    @media (max-width: 576px) {
+        flex-direction: column;
+    }
+}
+
+.se_additional_settings {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.se_additional_settings:nth-child(1n) {
+    margin-right: 5px;
+
+    @media (max-width: 576px) {
+        margin-right: 0px;
+    }
+}
+
+.se_additional_settings:nth-child(2n) {
+    margin-left: 5px;
+
+    @media (max-width: 576px) {
+        margin-left: 0px;
+        margin-top: 10px;
+    }
+}
